--- a/css/style.css
+++ b/css/style.css
@@ -4,42 +4,15 @@ html {
 
 body{
   display: flex;
-  justify-content: center;
+  margin: 2rem 1rem;
 }
 
 .container {
-	max-width: 100%;
-	width: 100vw;
-  height: 100vh;
-  background-color: red;
-  display: flex;
-  justify-content: center;
+	width: 100%;
+	height: 100vh;
+	background-color: red;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
 }
 
-/* Media Queries */
-/*---------------*/
-@media screen and (max-width: 1680px) {
-	.container {
-		width: 75em;
-	}
-}
-@media screen and (max-width: 1280px) {
-	.container {
-		width: calc(100% - 100px);
-	}
-}
-@media screen and (max-width: 980px) {
-	.container {
-		width: calc(100% - 100px);
-	}
-}
-@media screen and (max-width: 736px) {
-	.container {
-		width: calc(100% - 40px);
-	}
-}
-@media screen and (max-width: 360px) {
-	.container {
-		width: calc(100% - 30px);
-	}
-}
