--- a/css/style.css
+++ b/css/style.css
@@ -4,15 +4,16 @@ html {
 
 body{
   display: flex;
-  margin: 2rem 1rem;
+  margin: 2rem 2rem;
+  overflow: hidden;
 }
 
 .container {
 	width: 100%;
-	height: 100vh;
+	height: 96vh;
 	background-color: red;
 	display: flex;
-	justify-content: center;
+	align-items: center;
 	flex-direction: column;
 }
 
